# midiseq

./: .gitignore  CMakeLists.txt  README.md
src/: chain.cpp  chain.h  event_bus.cpp  event_bus.h  main.cpp  midi.cpp  midi.h  note.h  playback.cpp  playback.h  sequence.cpp  sequence.h  sequencer.cpp  sequencer.h
